# MM-FGVC

./: .gitignore  README.md  main.py  main.tex  nohup.out  paths.py  pyproject.toml  testidea.md
.codex_tmp/: run_c3_c4_rerun_20260327_020324.sh  run_c3_c4_rerun_20260327_020551.sh
.github/: copilot-instructions.md
conf/: config.yaml
conf/dataset/: eurosat_sample.yaml  general_custom.yaml  natural_ret_sample.yaml  naturalbench_ret.yaml  naturalbench_vqa.yaml  pets_sample.yaml  sugarcrepe_sample.yaml
docs/: BASELINE_REPRODUCTION_RESULTS.md  FGVC_METHOD_SUITE_RESULTS.md  PAPER_EXPERIMENT_PLAYBOOK.md  PAPER_REVISION_CHECKLIST_AND_SUPPLEMENT_20260401.md  REVIEW_RESPONSE_AND_REVISION_GUIDE_20260401.md  RSEV2_MAHALANOBIS_RESULTS.md  RSE_ADAPTIVE_COMBOS_AND_SUGARCREPE.md  RSE_EXPANDED_SUITE_RESULTS.md  RSE_PHASE1_IMPROVEMENTS.md  RSE_PHASE1_VALIDATION.md  SAV_ALL_TASK_WEIGHTED_VOTING_REPORT.md
scripts/: build_author_subset.py  check_datasets.py  compare_sav_weighting_sweeps.py  convert_data_to_json.py  download_hf_datasets.sh  extract_datasets.sh  fix_mhalubench_missing_images.py  rebuild_datasets_one_click.sh  run_all_task_method_suite.sh  run_fgvc_method_suite.sh  run_full_data_train.sh  run_rse_adaptive_combo_suite.sh  run_rse_expanded_suite.sh  run_rse_phase1_improvements.sh  run_rsev2_suite.sh  run_sav_diagnostic_sweep.sh  run_sav_head_ablation.sh  run_sav_idea_pilots.sh  summarize_fgvc_method_suite.py  summarize_rse_diagnostics.py  summarize_rse_improvement_suite.py  verify_datasets.py
src/: feishu_mcp_server.py  runner.py
swap/: README.md
(+3586 files in other folders)
